# reckless-drivin-sdl

./: CMakeLists.txt  README.md  build-linux-app.sh  build-mac-app.sh
.github/workflows/: build.yml  package.yml
include/: compat.h  error.h  gameinitexit.h  high.h  input.h  interface.h  objects.h  packs.h  particlefx.h  platform.h  preferences.h  register.h  renderframe.h  roads.h  screen.h  textfx.h  trig.h  vec2d.h
packaging/linux/: AppRun  RecklessDrivin.desktop
packaging/osx/: Info.plist.in  Reckless.icns  Reckless_2002.icns
src/: gameendseq.c  gameframe.c  gameinitexit.c  high.c  input.c  interface.c  lzrw.c  main.c  objectCollision.c  objectControl.c  objectPhysics.c  objects.c  packs.c  particlefx.c  pause.c  platform_sdl.c  preferences.c  random.c  register.c  renderframe.c  renderframezoom.c  rle.c  roaddraw.c  screen.c  screenfx.c  sound.c  sprites.c  textfx.c
